Use variable for table styles

--- a/scss/editor/tables/_border-table.scss
+++ b/scss/editor/tables/_border-table.scss
@@ -1,8 +1,14 @@
 .fas-border-tables {
-    --table-border-width: 1px;
-    --table-column-border-width: var(--table-border-width);
-    --table-column-first-border-width: var(--table-border-width);
-    --table-column-last-border-width: var(--table-border-width);
+    --fas-table-style: border;
+}
+
+@container style(--fas-table-style: border) {
+    body > * {
+        --table-border-width: 1px;
+        --table-column-border-width: var(--table-border-width);
+        --table-column-first-border-width: var(--table-border-width);
+        --table-column-last-border-width: var(--table-border-width);
+    }
 
     :is(.cm-html-embed, .markdown-rendered) :is(th, td) {
         border-inline-width: var(--table-border-width);
