--- a/scss/editor/tables/_default-table.scss
+++ b/scss/editor/tables/_default-table.scss
@@ -1,4 +1,6 @@
 body {
+    --fas-table-style: default;
+
     --table-header-background: transparent;
     --table-line-height: 1.8;
     --table-border-color: var(--color-base-10);
