--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -377,6 +377,14 @@ settings:
         min: 0
         max: 1
         step: 0.05
+    -
+        id: fas-background-image-elements-opacity
+        title: Content opacity
+        type: variable-number-slider
+        default: 1
+        min: 0
+        max: 1
+        step: 0.05
         
     - 
         id: file-explorer
