--- a/scss/plugins/_plugins.scss
+++ b/scss/plugins/_plugins.scss
@@ -5,6 +5,7 @@
 
 @use "community/dataview/dataview";
 @use "community/db-folder";
+@use "community/fantasy-statblocks";
 @use "community/folder-note";
 @use "community/highlight-active-folder-section";
 @use "community/image-caption";
